--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -113,69 +113,7 @@ main{
 	width: 100vw;
 	background-color: rgb(255, 255, 255);
  }
-#slider{
-	margin: 0px auto;
-	width: 100vw;
-	height: 58vw;
-	overflow: hidden;
-	background-color: #883636;
-}
-#slider:after{
+ iframe{
 	width: 100%;
-	height: 50px;
-	background-color: #883636;
-}
-#slides{
-	width: 400%;
-	height: 350px;
-	display: flex;
-}
-#slides input{
-	display: none;
-}
-.slide{
-	width: 25%;
-	position: relative;
-	transition: 2s;
-}
-.slide img{
-	width: 100%;
-}
-.manual-navigation{/* NAVEGAÇÃO MANUAL */
-	position: absolute;
-	width: 100%;
-	margin-top: 50vw;
-	display: flex;
-	justify-content: center;}
-.manual-btn{
-	border: 2px solid white;
-	padding: .8vw;
-	border-radius: 2vw;
-	cursor: pointer;
-	transition: .5s;}
-.manual-btn:not(:last-child){margin-right: 4vw;}
-.manual-btn:hover{background-color: white;}
-#sliderbtn1:checked ~ .first{margin-left: 0;}
-#sliderbtn2:checked ~ .first{margin-left: -25%;}
-#sliderbtn3:checked ~ .first{margin-left: -50%;}
-#sliderbtn4:checked ~ .first{margin-left: -75%;}
-/* FIM DA NAVEGAÇÃO MANUAL */
-.navigation-auto div{
-	border: 2px solid white;
-	padding: .8vw;
-	border-radius: 2vw;
-	cursor: pointer;
-	transition: .5s;}
-.navigation-auto{
-	position: absolute;
-	width: 100%;
-	margin-top: 50vw;
-	display: flex;
-	justify-content: center;}
-.navigation-auto div:not(:last-child){
-	margin-right: 4vw;
-}
-#sliderbtn1:checked ~ .navigation-auto .auto-btn1{background-color: white;}
-#sliderbtn2:checked ~ .navigation-auto .auto-btn2{background-color: white;}
-#sliderbtn3:checked ~ .navigation-auto .auto-btn3{background-color: white;}
-#sliderbtn4:checked ~ .navigation-auto .auto-btn4{background-color: white;}
+	overflow-y: hidden;
+ }
