--- a/imperio/estilos/slidecontrol.css
+++ b/imperio/estilos/slidecontrol.css
@@ -123,11 +123,6 @@ main{
 	overflow: hidden;
 	background-color: #883636;
 }
-#slider:after{
-	width: 100%;
-	height: 50px;
-	background-color: #883636;
-}
 #slides{
 	width: 400%;
 	height: 350px;
@@ -139,7 +134,7 @@ main{
 .slide{
 	width: 25%;
 	position: relative;
-	transition: 2s;
+	transition: .4s;
 }
 .manual-navigation{/* NAVEGAÇÃO MANUAL */
 	position: absolute;
