Ajustando responsividade com grandes telas

--- a/imperio/estilos/media-query-slider.css
+++ b/imperio/estilos/media-query-slider.css
@@ -8,50 +8,59 @@
     .frame1{
         background-image: url("../images/slides/desktop/slidea.jpg");
         background-position: center center;
-        width: 100vw;
+        /*width: 100vw;*/
+        max-width: 1200px;
 	    height:39vw;
     }
     .frame2{
         background-image: url("../images/slides/desktop/slideb.jpg");
         background-position: center center;
-        width: 100vw;
+        /*width: 100vw;*/
+        max-width: 1200px;
 	    height: 39vw;
     }
     .frame3{
         background-image: url("../images/slides/desktop/slidec.jpg");
         background-position: center center;
-        width: 100vw;
+        /*width: 100vw;*/
+        max-width: 1200px;
 	    height: 39vw;
     }
     .frame4{
         background-image: url("../images/slides/desktop/slided.jpg");
         background-position: center center;
-        width: 100vw;
+        /*width: 100vw;*/
+        max-width: 1200px;
 	    height: 39vw;
     }
     #slider{/*fora*/
         margin: 0px auto;
-        width: 100vw;
+        /*width: 100vw;*/
+        max-width: 1200px;
         height: fit-content;
         overflow: hidden;
         background-color: #883636;
     }
     #slides{/*dentro*/
         width: 400%;
-        height: fit-content;
+        height: 380px;
         display: flex;
         overflow: hidden;
     }
     .navigation-auto{
         position: absolute;
         width: 100%;
-        margin-top: 30vw;
+        margin-top: 340px;
         display: flex;
         justify-content: center;}
     .manual-navigation{/* NAVEGAÇÃO MANUAL */
         position: absolute;
         width: 100%;
-        margin-top: 30vw;
+        margin-top: 340px;
         display: flex;
         justify-content: center;}
+    .navigation-auto div:not(:last-child){margin-right: 1.5vw;}
+    .manual-btn:not(:last-child){margin-right: 1.5vw;}
+    .manual-btn{padding: .45vw;}
+    .navigation-auto div{padding: .45vw;}
 }
