--- a/imperio/estilos/media-query.css
+++ b/imperio/estilos/media-query.css
@@ -11,7 +11,7 @@
         height: 40vw;
         overflow-y: none;
         overflow-x: none;
-     }
+    }
     .shopItens{
         max-width: 1200px;
     }
@@ -24,10 +24,23 @@
     body{
         min-height: 100px;
     }
+    #mainSlider{
+        height: 400PX;
+        overflow-y: none;
+        overflow-x: none;
+    }
     .shopItens{
-        max-width: 1200px;
+        max-width: 1450px;
     }
     #shopContainer{
-        margin-top: -30vw;
+        /*margin-top: -30vw;*/ /*OLDER FIX*/
+    }
+    .shopProduct{
+        margin-top: 49.6px;
+        margin-right: 24.8px;
+        margin-left: 24.8px;
+        width: 200px;
+        height: 280px;
+        border: 1px solid rgb(207, 207, 207);
     }
 }
