--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -12,7 +12,8 @@
    --mainbackcolor:#883636;
 	--secbackcolor:#FFCAB8;
 	--titlefont:'Cherly', sans-serif;
-	--sectitlefont:'Arnitta', sans-serif;}
+	--sectitlefont:'Arnitta', sans-serif;
+	--maintext:Verdana, Geneva, Tahoma, sans-serif;}
 *{/* - START - */
     margin: 0px;
     padding: 0px;
@@ -21,13 +22,11 @@ html{
 	overflow-x: hidden;
 }
 body{
-   /*min-height: 100vh;*/
-   height: 1200px;
+   height: fit-content;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
-   
 }
 
 header{
@@ -45,10 +44,11 @@ header{
 	align-items: center;
 }
 #rightHeader img{
-	width: 50px;
+	width: 30px;
 	height: 30px;
-	padding-right: 20px;
-	transition: 1s;
+	/*padding-right: 20px;*/
+	margin-right: 6vw;
+	transition: .4s;
 }
 #rightHeader img:hover{
 	filter: invert();
@@ -66,7 +66,7 @@ header{
 	width: 50px;
 	height: 30px;
 	padding-left: 20px;
-	transition: 1s;
+	transition: .4ss;
 }
 #leftHeader img:hover{
 	filter: invert();
@@ -115,13 +115,14 @@ header{
 }
 main{
 	flex: 1;
-	height: 100vh;
+	/*height: 100vh;*/
+	/*height: 1000px;*/
 	width: 100vw;
 	background-color: rgb(255, 255, 255);
  }
 #mainSlider{
 	width: 100vw;
-	height: 59vw;
+	height: 59vw; /*É AQUI?????????*/
 	overflow-y: none;
 	overflow-x: none;
 }
@@ -139,10 +140,66 @@ main{
 	justify-content: center;
 }
 .shopProduct{
-	margin-top: 6vw;
-	margin-right: 3vw;
-	margin-left: 3vw;
-	width: 180px;
-	height: 250px;
-	border: 1px solid rgb(207, 207, 207);
+	margin-top: calc(2vw + 25px);
+	margin-right: calc(1.5vw + 10px);
+	margin-left: calc(1.5vw + 10px);
+	width: 200px;
+	height: 280px;
+	border: 1px solid rgb(233, 233, 233);
+	border-radius: 2px;
+	display: flex;
+	flex-direction: column;
+	transition: .1s;
+}
+.shopProduct:hover{
+	cursor: pointer;
+	border: 2px solid rgb(212, 212, 212);
+	transition: .1s;
+}
+.shopProduct > img{
+	display: block;
+	width: 80%;
+	padding: 20px 10px;
+	margin: 0 auto auto auto;
+	/*border-bottom: 1px solid rgb(233, 233, 233);*/
+}
+.descProduto{
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	
+}
+.antigoProduto{
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	width: 100%;
+	text-align: center;
+	text-decoration: line-through;
+	color: gray;
+	margin-bottom: -5px;
+	font-size: .95em;
+}
+.nomeProduto{
+	height: 100%;
+	width: 100%;
+	text-align: center;
+	font-family: var(--maintext);
+	font-size: .9em;
+	font-weight: 100;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+.valorProduto{
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	text-align: center;
+	font-weight: 600;
+	font-size: 1.1em;
+	padding-bottom: 5px;
+}
+footer{
+	font-family: var(--maintext);
+	margin-top: 100px;
+	height: 400px;
+	width: 100vw;
+	background-color: #883636;
 }
