--- a/imperio/estilos/media-query.css
+++ b/imperio/estilos/media-query.css
@@ -1,7 +1,12 @@
 @charset "UTF-8";
 
 @media screen and (min-width: 768px) and (max-width: 992px){
-    
+    #shopContainer{
+        margin-top: -5vw;
+    }
+    .shopItens{
+        max-width: 800px;
+    }
 }
 
 @media screen and (min-width: 992px) and (max-width: 1200px){
