--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -7,7 +7,6 @@
     font-family: 'Arnitta';
     src: url('../fontes/Arnitta\ Callina.otf')
     format('opentype');}
-
 :root{/* - VARIAVEIS - */
    --mainbackcolor:#883636;
 	--secbackcolor:#FFCAB8;
@@ -19,14 +18,16 @@
     padding: 0px;
     box-sizing: border-box;}
 html{
-	overflow-x: hidden;
-}
+	/*overflow-x: none;*/}
+	/*set to none*/
+	/*https://www.freecodecamp.org/news/html-page-width-height/*/
 body{
-   height: fit-content;
-   display: flex;
+	width: 100%;
+   min-height: 100vh;
+   /*display: flex;
    flex-direction: column;
-   justify-content: flex-start;
-   align-items: flex-start;
+   justify-content: center;
+   align-items: center;*/
 }
 
 header{
@@ -34,7 +35,7 @@ header{
 	justify-content: center;
    	height: 90px;
    	background-color: var(--mainbackcolor);
-   	width: 100vw;
+   	width: 100%;
 }
 #rightHeader{
 	width: 100%;
@@ -44,14 +45,16 @@ header{
 	align-items: center;
 }
 #rightHeader img{
-	width: 30px;
-	height: 30px;
-	/*padding-right: 20px;*/
-	margin-right: 6vw;
-	transition: .4s;
+	height: 100%;
+	width: height;
+	filter: invert();
+	padding: 25px;
+	transition: 1s;
 }
 #rightHeader img:hover{
-	filter: invert();
+	background-color: #FFCAB8;
+	padding: 23px;
+	filter: none;
 	transition: .4s;
 	cursor: pointer;
 }
@@ -63,13 +66,16 @@ header{
 	align-items: center;
 }
 #leftHeader img{
-	width: 50px;
-	height: 30px;
-	padding-left: 20px;
-	transition: .4ss;
+	height: 100%;
+	width: height;
+	filter: invert();
+	padding: 25px;
+	transition: 1s;
 }
 #leftHeader img:hover{
-	filter: invert();
+	background-color: #FFCAB8;
+	padding: 22px;
+	filter: none;
 	transition: .4s;
 	cursor: pointer;
 }
@@ -79,8 +85,7 @@ header{
 	justify-content: center;
 	align-items: center;
 	height: 100%;
-	width: 100%;
-	border-radius: 50px;
+	width: 800px;
 	cursor: pointer;
 	transition: 1s;
 }
@@ -92,7 +97,7 @@ header{
 #logoImage{
 	width: 80px;
 	height: 80px;
-	margin-left: -45px;
+	margin-left: -70px;
 	margin-top: -5px;
 	transition: 1s;
 	border-radius: 50px;
@@ -101,27 +106,43 @@ header{
 	font-family: var(--titlefont);
 	font-size: 3em;
 	font-weight: 100;
-	margin-top: 20px;
+	margin-top: 48px;
 	margin-bottom: 50px;
 	margin-left: -20px;
+	background-color: #FFCAB8;
+	/*border: 1.5px dotted black;*/
+	/*border: 3px double black;*/
+	/*border: 4px double #883636;*/
+	border: 8px double #883636;
+	/*border: 2px dotted black;*/
+	/*border: 2px dotted #883636;*/
+	/*border: 2px dotted #883636;*/
+	/*border: 4px outset #883636;*/
+	border-radius: 0px 30px 0px 30px;
+	color: #883636;
+
+	padding-left: 5px;
+	padding-right: 5px;
 }
 #secTitle{
 	font-family: var(--sectitlefont);
 	font-size: 1.5em;
-	font-weight: 100;
-	margin-top: 20px;
-	margin-left: -112px;
-	color: var(--secbackcolor);
+	font-weight: 500;
+	margin-top: 45px;
+	margin-left: -125px;
+
+	text-shadow: 0px 1px 1px #883636;
+	/*color: var(--secbackcolor);*/
 }
 main{
 	flex: 1;
 	/*height: 100vh;*/
 	/*height: 1000px;*/
-	width: 100vw;
+	width: 100%;
 	background-color: rgb(255, 255, 255);
  }
 #mainSlider{
-	width: 100vw;
+	width: 100%;
 	height: 59vw; /*É AQUI?????????*/
 	overflow-y: none;
 	overflow-x: none;
@@ -146,14 +167,14 @@ main{
 	width: 200px;
 	height: 280px;
 	border: 1px solid rgb(233, 233, 233);
-	border-radius: 2px;
+	border-radius: 3px;
 	display: flex;
 	flex-direction: column;
 	transition: .1s;
 }
 .shopProduct:hover{
 	cursor: pointer;
-	border: 2px solid rgb(212, 212, 212);
+	outline: 4px solid var(--mainbackcolor);
 	transition: .1s;
 }
 .shopProduct > img{
@@ -197,9 +218,10 @@ main{
 	padding-bottom: 5px;
 }
 footer{
+	/*margin-left: 50px;*/
 	font-family: var(--maintext);
 	margin-top: 100px;
 	height: 400px;
-	width: 100vw;
+	width: 100%;
 	background-color: #883636;
 }
