--- a/imperio/estilos/media-query.css
+++ b/imperio/estilos/media-query.css
@@ -1,5 +1,120 @@
 @charset "UTF-8";
 
+@media screen and (max-width: 768px){
+    header{
+        display: flex;
+        justify-content: center;
+           height: 50px;
+           background-color: var(--mainbackcolor);
+           width: 100%;
+    }
+    #rightHeader{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: right;
+        align-items: center;
+        padding-right: 20px;
+    }
+    #rightHeader img{
+        height: 100%;
+        width: height;
+        filter: invert();
+        padding: 10px;
+        transition: 1s;
+    }
+    #rightHeader img:hover{
+        background-color: #FFCAB8;
+        padding: 4px;
+        filter: none;
+        transition: .4s;
+        cursor: pointer;
+    }
+    #leftHeader{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: left;
+        align-items: center;
+        padding-left: 20px;
+    }
+    #leftHeader img{ 
+        height: 100%;
+        width: height;
+        filter: invert();
+        padding: 10px;
+        transition: 1s;
+    }
+    #leftHeader img:hover{
+        background-color: #FFCAB8;
+        padding: 4px;
+        filter: none;
+        transition: .4s;
+        cursor: pointer;
+    }
+    #logo{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 400px;
+        cursor: pointer;
+        transition: 1s;
+    }
+    #logo:hover #logoImage{
+        width: 47px;
+        height: 47px;
+        transition: 1s;
+    }
+    #logoImage{
+        width: 45px;
+        height: 45px;
+        margin-left: -40px;
+        margin-top: -5px;
+        transition: 1s;
+        border-radius: 50px;
+    }
+    #mainTitle{
+        font-family: var(--titlefont);
+        font-size: 1.5em;
+        font-weight: 100;
+        margin-top: 48px;
+        margin-bottom: 50px;
+        margin-left: -10px;
+        background-color: #FFCAB8;
+        /*border: 1.5px dotted black;*/
+        /*border: 3px double black;*/
+        /*border: 4px double #883636;*/
+        border: 4px double #883636;
+        /*border: 2px dotted black;*/
+        /*border: 2px dotted #883636;*/
+        /*border: 2px dotted #883636;*/
+        /*border: 4px outset #883636;*/
+        border-radius: 0px 15px 0px 15px;
+        color: #883636;
+    
+        padding-left: 5px;
+        padding-right: 5px;
+
+        transition: 1s;
+    }
+    #secTitle{
+        font-family: var(--sectitlefont);
+        font-size: .75em;
+        font-weight: 500;
+        margin-top: 20px;
+        margin-left: -65px;
+    
+        text-shadow: 0px 1px 1px #883636;
+        /*color: var(--secbackcolor);*/
+    }
+    footer{
+        display: flex;
+        flex-direction: column;
+    }
+}
+
 @media screen and (min-width: 768px) and (max-width: 992px){
     #shopContainer{
         margin-top: -5vw;
