--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -123,6 +123,8 @@ header{
 
 	padding-left: 5px;
 	padding-right: 5px;
+
+	transition: 1s;
 }
 #secTitle{
 	font-family: var(--sectitlefont);
@@ -218,10 +220,47 @@ main{
 	padding-bottom: 5px;
 }
 footer{
+	
+    display: flex;
+    flex-direction: row-reverse;
+	justify-content: left;
+    
 	/*margin-left: 50px;*/
 	font-family: var(--maintext);
 	margin-top: 100px;
+	padding-top: 50px;
+	padding-left: 5px;
 	height: 400px;
 	width: 100%;
 	background-color: #883636;
+}
+.footerblock{
+	margin-right: 6vw;
+}
+.footerblock h1{
+	font-size: 1.5em;
+	color: #FFCAB8;
+}
+.footerblock > ul{
+	list-style: none;
+}
+.footerblock > ul > li{
+	padding-top: 5px;
+}
+.footerblock > ul > li > a{
+	font-family: Arial, Helvetica, sans-serif;
+	text-decoration: none;
+	color: white;
+	font-size: 1em;
+	font-weight: 400;
+}
+.permaconectado{
+	display: flex;
+	flex-direction: row;
+	margin-bottom: 40px;
+}
+.permaconectado > li > a > img{
+	filter: invert();
+	border-radius: 6px;
+	margin-right: 5px;
 }
