--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -7,7 +7,15 @@
     font-family: 'Arnitta';
     src: url('../fontes/Arnitta\ Callina.otf')
     format('opentype');}
-:root{/* - VARIAVEIS - */
+@keyframes menuOpen{
+	0%{left: -350px;display: absolute;}
+	100%{left: 0px;}
+}
+@keyframes menuClose{
+	0%{left: 0px;}
+	100%{left: -350px;display: none;}
+}
+	:root{/* - VARIAVEIS - */
    --mainbackcolor:#883636;
 	--secbackcolor:#FFCAB8;
 	--titlefont:'Cherly', sans-serif;
@@ -18,16 +26,11 @@
     padding: 0px;
     box-sizing: border-box;}
 html{
-	/*overflow-x: none;*/}
-	/*set to none*/
-	/*https://www.freecodecamp.org/news/html-page-width-height/*/
+	overflow-y: none;}
+	
 body{
 	width: 100%;
-   min-height: 100vh;
-   /*display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;*/
+	min-height: 100vh;
 }
 
 header{
@@ -163,11 +166,11 @@ main{
 	justify-content: center;
 }
 .shopProduct{
-	margin-top: calc(2vw + 25px);
-	margin-right: calc(1.5vw + 10px);
-	margin-left: calc(1.5vw + 10px);
-	width: 200px;
-	height: 280px;
+	margin-top: calc(2vw + 15px);
+	margin-right: calc(.5vw);
+	margin-left: calc(.5vw);
+	width: 220px;
+	height: 300px;
 	border: 1px solid rgb(233, 233, 233);
 	border-radius: 3px;
 	display: flex;
@@ -261,6 +264,34 @@ footer{
 }
 .permaconectado > li > a > img{
 	filter: invert();
-	border-radius: 6px;
+	border-radius: 9px;
 	margin-right: 5px;
+	transition: 1s;
+}
+.permaconectado > li > a > img:hover{
+	background-color: #FFCAB8;
+	transition: .4s;
+	filter: none;
+	/*box-shadow: 0px 0px 40px #003547;*/
+}
+.shadowBox{
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.250);
+	overflow-y: hidden;
+}
+.left_menuBar{
+	position: absolute;
+	margin-left: 0px;
+	top: 0%;
+	left: 0px;
+	width: 350px;
+	height: 100%;
+	background-color: white;
+	box-shadow: 10px 0px 10px rgba(0, 0, 0, 0.250);
+	animation-duration: 1s;
+	animation-fill-mode: forwards;
 }
