--- a/imperio/estilos/instit_style.css
+++ b/imperio/estilos/instit_style.css
@@ -137,85 +137,39 @@ header{
 main{
 	flex: 1;
 	/*height: 100vh;*/
-	/*height: 1000px;*/
+	height: 1000px;
 	width: 100%;
 	background-color: rgb(255, 255, 255);
  }
-#mainSlider{
-	width: 100%;
-	height: 59vw; /*É AQUI?????????*/
-	overflow-y: none;
-	overflow-x: none;
-}
+
 #shopContainer{
-	/*background-color: rgb(201, 185, 175);*/
+	height: fit-content;
 }
-.shopItens{
+.descArticle{
 	/*background-color: rgb(205, 228, 236);*/
 	margin: 0 auto 0 auto;
 	max-width: 600px;
-
+	height: fit-content;
+	/*
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: center;
+	*/
 }
-.shopProduct{
-	margin-top: calc(2vw + 15px);
-	margin-right: calc(.5vw);
-	margin-left: calc(.5vw);
-	width: 220px;
-	height: 300px;
-	border: 1px solid rgb(233, 233, 233);
-	border-radius: 3px;
-	display: flex;
-	flex-direction: column;
-	transition: .1s;
+.descArticle h1{
+	font-family: Arial, Helvetica, sans-serif;
+	margin-top: 40px;
 }
-.shopProduct:hover{
-	cursor: pointer;
-	outline: 4px solid var(--mainbackcolor);
-	transition: .1s;
+.descArticle h2{
+	font-family: Arial, Helvetica, sans-serif;
+	margin-top: 20px;
+	text-align: left;
 }
-.shopProduct > img{
-	display: block;
-	width: 80%;
-	padding: 20px 10px;
-	margin: 0 auto auto auto;
-	/*border-bottom: 1px solid rgb(233, 233, 233);*/
-}
-.descProduto{
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	
-}
-.antigoProduto{
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	width: 100%;
-	text-align: center;
-	text-decoration: line-through;
-	color: gray;
-	margin-bottom: -5px;
-	font-size: .95em;
-}
-.nomeProduto{
-	height: 100%;
-	width: 100%;
-	text-align: center;
-	font-family: var(--maintext);
-	font-size: .9em;
-	font-weight: 100;
-	padding-left: 10px;
-	padding-right: 10px;
-}
-.valorProduto{
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	text-align: center;
-	font-weight: 600;
-	font-size: 1.1em;
-	padding-bottom: 5px;
+.descArticle p{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 1.2em;
+	line-height: 30px;
 }
 footer{
 	
