--- a/imperio/estilos/instit_style.css
+++ b/imperio/estilos/instit_style.css
@@ -31,11 +31,12 @@ body{/*BETTER WAY TO START WIDTH AND HEIGHT BODY*/
 header{
 	display: flex;
 	justify-content: center;
-   	height: 90px;
+   	height: 100px;
    	background-color: var(--mainbackcolor);
    	width: 100%;
 }
 #rightHeader{
+	height: 100%;
 	width: 100%;
 	display: flex;
 	flex-direction: row;
@@ -51,12 +52,12 @@ header{
 }
 #rightHeader img:hover{
 	background-color: #FFCAB8;
-	padding: 23px;
 	filter: none;
 	transition: .4s;
 	cursor: pointer;
 }
 #leftHeader{
+	height: 100%;
 	width: 100%;
 	display: flex;
 	flex-direction: row;
@@ -72,7 +73,7 @@ header{
 }
 #leftHeader img:hover{
 	background-color: #FFCAB8;
-	padding: 22px;
+	padding: 25px;
 	filter: none;
 	transition: .4s;
 	cursor: pointer;
