--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -13,6 +13,12 @@
 @keyframes menuClose{
 	0%{left: 0px;}
 	100%{left: -350px;display: none;}}
+@keyframes cartOpen{
+	0%{left: 100%;}
+	100%{left: calc(100% - 350px);}}
+@keyframes cartClose{
+	0%{display: block;left: calc(100% - 350px);}
+	100%{left: 100%;}}
 :root{/* - VARIAVEIS - */
    --mainbackcolor:#883636;
 	--secbackcolor:#FFCAB8;
@@ -245,12 +251,20 @@ footer{
 .footerblock > ul > li{
 	padding-top: 5px;
 }
-.footerblock > ul > li > a{
+/*.footerblock > ul > li > a*/.footeritem > a{
 	font-family: Arial, Helvetica, sans-serif;
 	text-decoration: none;
 	color: white;
 	font-size: 1em;
 	font-weight: 400;
+	border-radius: 3px;
+	transition: 1s;
+}
+.footeritem > a:hover{
+	width: fit-content;
+	background-color: #FFCAB8;
+	color: black;
+	transition: .4s;
 }
 .permaconectado{
 	display: flex;
@@ -278,6 +292,7 @@ footer{
 	background-color: rgba(0, 0, 0, 0.250);
 	overflow-y: hidden;
 }
+/* ------------ LEFT MENU ------------ */
 .left_menuBar{
 	position: absolute;
 	margin-left: 0px;
@@ -354,3 +369,53 @@ footer{
 	filter: none;
 	transition: .4s;
 }
+/* ------------ CART MENU ------------ */
+.right_cartShop{
+	display: none;
+	position: absolute;
+	margin-left: 0px;
+	top: 0%;
+	left: 100%;
+	width: 350px;
+	height: 100%;
+	background-color: white;
+	box-shadow: -10px 0px 10px rgba(0, 0, 0, 0.250);
+	animation-duration: 1s;
+	animation-fill-mode: forwards;
+}
+.right_cartShop > p{
+	text-align: center;
+	margin: 100px auto 0px auto;
+	width: 250px;
+	height: 50px;
+}
+#cartHeader{
+	display: flex;
+	flex-direction: row;
+	height: fit-content;
+	font-size: .65em;
+	background-color: #883636;
+	color: white;
+}
+#cartHeader > h1{
+	padding: 20px 0px 7px 20px;
+	width: 80%;
+}
+#cartHeader > span{
+	width: 20%;
+	height: width;
+	transition: 1s;
+	filter: invert();
+	cursor: pointer;
+}
+#cartHeader > span > img{
+	width: 100%;
+	height: 100%;
+	padding: 10px;
+}
+#cartHeader > span:hover{
+	background-color: #FFCAB8;
+	filter: none;
+	transition: .4s;
+}
+/* ------------ CENTER HEART PLUS ------------ */
