--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -470,3 +470,30 @@ footer{
 	width: 250px;
 	height: 50px;
 }
+.heartSpace{
+	height: 75%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+}
+.heartWhats{
+	background-image: linear-gradient(to bottom, #25D366,#20aa53);
+	color: white;
+	padding: 25px 0px 35px 0px;
+	font-size: 1.2em;
+	text-decoration: none;
+	border-radius: 20px;
+}
+.heartWhats > img,.heartInsta > img{
+	filter: invert();
+	margin-bottom: -20px;
+	margin-left: 25px;
+}
+.heartInsta{
+	background-image: linear-gradient(to left bottom, #405DE6,  #5B51D8, #833AB4, #C13584,#FD1D1D,#FCAF45 ,#FFDC80);
+	color: white;
+	padding: 25px 0px 35px 0px;
+	font-size: 1.2em;
+	text-decoration: none;
+	border-radius: 20px;
+}
