--- a/stars/style.css
+++ b/stars/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
 html{
     background-color: black;
+}
+canvas{
+    /*width: 100%;*/
+    /*height: 100vh;*/
+    border: 1px solid rgb(255, 0, 0);
 }
