--- a/stars/style.css
+++ b/stars/style.css
@@ -8,8 +8,11 @@
 html{
     background-color: black;
 }
+body{
+    overflow: hidden;
+}
 canvas{
     /*width: 100%;*/
     /*height: 100vh;*/
-    border: 1px solid rgb(255, 0, 0);
+    /*border: 1px solid rgb(255, 0, 0);*/
 }
