--- a/imperio/estilos/slidecontrol.css
+++ b/imperio/estilos/slidecontrol.css
@@ -6,7 +6,8 @@
     box-sizing: border-box;}
 
 body{
-   min-height: 100vh;
+   /*min-height: 100vw;*/
+   height: fit-content;
    display: flex;
    flex-direction: column;
 }
@@ -118,7 +119,7 @@ main{
  }
 #slider{
 	margin: 0px auto;
-	width: 100vw;
+	width: 100%;
 	height: 58vw;
 	overflow: hidden;
 	background-color: #883636;
