--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -155,15 +155,57 @@ main{ /* MAIN */
 	overflow-x: hidden;
 }
 #showProduct{
+	border: 1px solid black;
 	margin: auto;
 	max-width: 1200px;
-	display: flex;
-	flex-direction: row;
+	max-height: 600px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
 }
-#showProduct > .pshowMainimage{
-	width: 70%;
-	padding: 50px;
+.pshowDefinition{
+	width: fit-content;
+	grid-column: 1;
+	grid-row: 1;
 }
+.pshowMainimage{
+	width: 100%;
+	padding-left: 10vw;
+	padding-right: 10vw;
+	grid-column: 2;
+	grid-row: 1;
+	border: 1px solid red;
+}
+.pshowShare{
+	/*width: 50%;
+	padding: 50px;*/
+	grid-column: 1;
+	grid-row: 2;
+	border: 1px solid red;
+}
+.pshowSecimages{
+	grid-column: 2;
+	grid-row: 2;
+
+	display: grid;
+	border: 1px solid rgb(55, 0, 255);
+	grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+}
+.SecimgA, .SecimgB, .SecimgC{
+	width: 100%;
+	padding-left: 3vw;
+	padding-right: 3vw;
+	transition: .1s;
+	
+}
+.SecimgA:hover, .SecimgB:hover, .SecimgC:hover{
+	border-radius: 4px;
+	outline: 3px solid var(--mainbackcolor);
+	transition: .1s;
+	cursor: pointer;
+}
+
 #msgIntro{
 	padding-top: 16px;
 	text-align: center;
