--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -160,33 +160,29 @@ main{ /* MAIN */
 	max-width: 1200px;
 	max-height: 600px;
 	display: grid;
+	
 	grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto auto;
+	grid-template-areas: "def mimg" "share simg" "cart cart";
 }
 .pshowDefinition{
 	width: fit-content;
-	grid-column: 1;
-	grid-row: 1;
+	grid-area: def;
 }
 .pshowMainimage{
 	width: 100%;
 	padding-left: 10vw;
 	padding-right: 10vw;
-	grid-column: 2;
-	grid-row: 1;
 	border: 1px solid red;
+	grid-area: mimg;
 }
 .pshowShare{
-	/*width: 50%;
-	padding: 50px;*/
-	grid-column: 1;
-	grid-row: 2;
 	border: 1px solid red;
+	grid-area: share;
 }
 .pshowSecimages{
-	grid-column: 2;
-	grid-row: 2;
-
+	grid-area: simg;
+	height: fit-content;
 	display: grid;
 	border: 1px solid rgb(55, 0, 255);
 	grid-template-columns: 1fr 1fr 1fr;
@@ -197,13 +193,16 @@ main{ /* MAIN */
 	padding-left: 3vw;
 	padding-right: 3vw;
 	transition: .1s;
-	
 }
 .SecimgA:hover, .SecimgB:hover, .SecimgC:hover{
 	border-radius: 4px;
 	outline: 3px solid var(--mainbackcolor);
 	transition: .1s;
 	cursor: pointer;
+}
+.pshowCartadd{
+	grid-area: cart;
+	border: 1px solid green;
 }
 
 #msgIntro{
