--- a/imperio/estilos/media-query.css
+++ b/imperio/estilos/media-query.css
@@ -123,6 +123,13 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px){
+    #showProduct{
+        margin: 0px auto 40px auto;
+    }
+    .pshowMainimagespace{
+        padding-right: 6vw;
+        padding-left: 6vw;
+    }
     #shopContainer{
         margin-top: 1vw;
     }
@@ -134,6 +141,13 @@
 
 @media screen and (min-width: 992px) and (max-width: 1200px){
     /*HERE*/
+    #showProduct{
+        margin: 0px auto 40px auto;
+    }
+    .pshowMainimagespace{
+        padding-right: 8vw;
+        padding-left: 8vw;
+    }
     #mainSlider{
         width: 100%;
         height: 400px;
@@ -158,6 +172,9 @@
         overflow-y: none;
         overflow-x: none;
     }
+    #showProduct{
+        margin: 0px auto 40px auto;
+    }
     .shopItens{
         margin: calc(-25px) auto 0 auto;
         max-width: 1450px;
@@ -172,6 +189,10 @@
         width: 200px;
         height: 280px;
         border: 1px solid rgb(207, 207, 207);
+    }
+    .pshowMainimagespace{
+        padding-right: 100px;
+        padding-left: 100px;
     }
     #msgIntro{
         margin: auto;
