--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -163,9 +163,9 @@ main{ /* MAIN */
 	padding: 25px 15px 0px 15px;
 	display: none;
 	gap: 10px;
-	grid-template-columns: 1.3fr 1fr;
+	grid-template-columns: 1fr;
     grid-template-rows: auto auto auto;
-	grid-template-areas: "mimg def" "simg share" "cart cart";
+	grid-template-areas: "mimg" "simg" "cart" "cbtn" "share" "def";
 }
 .pshowDefinition{
 	border-left: 1px solid rgb(238, 238, 238);
@@ -179,7 +179,7 @@ main{ /* MAIN */
 	color: #3a3a3a;
 	width: 100%;
 	font-family: 'Dosis', sans-serif;
-	font-size: calc(1.4em + 1vw);
+	font-size: calc(2em + 1vw);
 	font-weight: 600;
 	margin-bottom: 15px;
 }
@@ -189,33 +189,50 @@ main{ /* MAIN */
 	font-size: .8em;
 	
 }
+.pshowCartadd{
+	padding-left: 20px;
+	width: 100%;
+	font-family: var(--maintext);
+	font-size: .8em;
+	grid-area: cart;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+}
 .olderPrice{
+	margin-top: 4vw;
 	color: rgb(150, 150, 150);
 	font-family: 'Dosis', sans-serif;
 	font-size: 1.5em;
 	font-weight: 100;
 	text-decoration: line-through;
 }
+.actualPrice{
+	color: rgb(22, 22, 22);
+	font-family: 'Dosis', sans-serif;
+	font-size: 2.2em;
+}
 .cartButton{
+	grid-area: cbtn;
+	border-radius: 2px;
 	text-align: center;
-	padding-top: 15px;
-	padding-bottom: 15px;
-	line-height: 30px;
-	margin-top: 15vw;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	line-height: 35px;
+	/*margin-top: 15vw;*/
 	height: fit-content;
 	font-family: 'Dosis', sans-serif;
 	font-size: 3em;
 	color: white;
 	background-color: #36cb90;
-	box-shadow: 0px 4px 0px #2ca172;
+	box-shadow: 0px 2px 0px #2ca172;
+	transition: .4s;
 }
 .cartButton:hover{
 	cursor: pointer;
-}
-.actualPrice{
-	color: rgb(22, 22, 22);
-	font-family: 'Dosis', sans-serif;
-	font-size: 2.2em;
+	background-color: #3cdd9d;
+	transition: .1s;
 }
 .pshowMainimagespace{
 	width: 100%;
@@ -227,6 +244,40 @@ main{ /* MAIN */
 }
 .pshowMainimage{
 	width: 100%;
+}/*
+.pshowSecimages{
+	grid-area: simg;
+	height: fit-content;
+	display: grid;
+	
+	grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+}
+.SecimgA, .SecimgB, .SecimgC{
+	outline: 0px double var(--mainbackcolor);
+	width: 100%;
+	padding-left: 3vw;
+	padding-right: 3vw;
+	transition: .1s;
+}*/
+.pshowSecimages{
+	grid-area: simg;
+	height: fit-content;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+}
+.SecimgA, .SecimgB, .SecimgC{
+	outline: 0px double var(--mainbackcolor);
+	width: 30%;
+	padding-left: 3vw;
+	padding-right: 3vw;
+	transition: .1s;
+}
+.SecimgA:hover, .SecimgB:hover, .SecimgC:hover{
+	outline: 3px solid var(--mainbackcolor);
+	transition: .1s;
+	cursor: pointer;
 }
 .pshowPromo{
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -252,45 +303,17 @@ main{ /* MAIN */
 	grid-area: share;
 }
 .pshowShare > img{
-	width: calc(10px + 3vw);
+	width: calc(40px + 1vw);
 	transition: 1s;
 }
 .pshowShare > img:hover{
 	border-radius: 9px;
-	width: calc(10px + 3vw);
+	width: calc(40px + 1vw);
 	background-color: var(--secbackcolor);
 	transition: .4s;
 	cursor: pointer;
 }
-.pshowSecimages{
-	grid-area: simg;
-	height: fit-content;
-	display: grid;
-	
-	grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-}
-.SecimgA, .SecimgB, .SecimgC{
-	outline: 0px double var(--mainbackcolor);
-	width: 100%;
-	padding-left: 3vw;
-	padding-right: 3vw;
-	transition: .1s;
-}
-.SecimgA:hover, .SecimgB:hover, .SecimgC:hover{
-	outline: 3px solid var(--mainbackcolor);
-	transition: .1s;
-	cursor: pointer;
-}
-.pshowCartadd{
-	padding-left: 20px;
-	width: 100%;
-	font-family: var(--maintext);
-	font-size: .8em;
 
-	grid-area: cart;
-	/*border: 1px solid green;*/
-}
 
 #msgIntro{
 	padding-top: 16px;
