--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -176,7 +176,7 @@ main{ /* MAIN */
 }
 .pshowName{
 	line-height: 33px;
-	color: #3a3a3a;
+	color: #505050;
 	width: 100%;
 	font-family: 'Dosis', sans-serif;
 	font-size: calc(2em + 1vw);
@@ -219,11 +219,11 @@ main{ /* MAIN */
 	text-align: center;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	line-height: 35px;
+	line-height: 38px;
 	/*margin-top: 15vw;*/
 	height: fit-content;
 	font-family: 'Dosis', sans-serif;
-	font-size: 3em;
+	font-size: 2em;
 	color: white;
 	background-color: #36cb90;
 	box-shadow: 0px 2px 0px #2ca172;
@@ -232,7 +232,7 @@ main{ /* MAIN */
 .cartButton:hover{
 	cursor: pointer;
 	background-color: #3cdd9d;
-	transition: .1s;
+	transition: .4s;
 }
 .pshowMainimagespace{
 	width: 100%;
@@ -244,22 +244,7 @@ main{ /* MAIN */
 }
 .pshowMainimage{
 	width: 100%;
-}/*
-.pshowSecimages{
-	grid-area: simg;
-	height: fit-content;
-	display: grid;
-	
-	grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
 }
-.SecimgA, .SecimgB, .SecimgC{
-	outline: 0px double var(--mainbackcolor);
-	width: 100%;
-	padding-left: 3vw;
-	padding-right: 3vw;
-	transition: .1s;
-}*/
 .pshowSecimages{
 	grid-area: simg;
 	height: fit-content;
@@ -313,8 +298,6 @@ main{ /* MAIN */
 	transition: .4s;
 	cursor: pointer;
 }
-
-
 #msgIntro{
 	padding-top: 16px;
 	text-align: center;
