--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -237,7 +237,7 @@ main{ /* MAIN */
 }
 .pshowMainimagespace{
 	width: 100%;
-	padding-top: calc(60px - 5vw);
+	padding-top: calc(10px - 5vw);
 	grid-area: mimg;
 	overflow: hidden;
 }
@@ -495,15 +495,15 @@ footer{ /* FOOTER */
 }
 .menuItens{
 	width: 100%;
-	height: 50px;
-	font-size: 1.4em;
+	height: 40px;
+	font-size: 1em;
 	padding: 10px;
 	vertical-align: middle;
-	text-indent: 20px;
+	text-indent: 10px;
 	transition: 1s;
 }
 .menuItens:hover{
-	text-indent: 30px;
+	text-indent: 20px;
 	background-color: var(--mainbackcolor);
 	color: var(--secbackcolor);
 	transition: .4s;
@@ -511,10 +511,10 @@ footer{ /* FOOTER */
 }
 .menuTitles{
 	width: 100%;
-	height: 50px;
-	font-size: 1.4em;
+	height: 30px;
+	font-size: 1em;
 	font-weight: 600;
-	padding-top: 7px;
+	padding-bottom: 20px;
 	vertical-align: middle;
 	text-indent: 20px;
 	transition: 1s;
@@ -526,22 +526,22 @@ footer{ /* FOOTER */
 	height: 25px;
 	filter: invert();
 	margin-right: 10px;
+	margin-bottom: -5px;
 }
 #menuHeader{
 	display: flex;
 	flex-direction: row;
-	height: fit-content;
-	font-size: .65em;
+	height: 50px;
+	font-size: .6em;
 	background-color: var(--mainbackcolor);
 	color: white;
 }
 #menuHeader > h1{
-	padding: 7px 0px 7px 20px;
-	width: 80%;
+	padding: 15px 10px 7px 10px;
+	width: 88%;
 }
 #menuHeader > span{
-	width: 20%;
-	height: width;
+	height: 100%;
 	transition: 1s;
 	filter: invert();
 	cursor: pointer;
