--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -566,32 +566,47 @@ footer{ /* FOOTER */
 	left: 100%;
 	width: 350px;
 	height: 100%;
+	border: 1px solid blue;
 	background-color: white;
-	box-shadow: -10px 0px 10px rgba(0, 0, 0, 0.250);
+	box-shadow: -10px 0px 10px rgba(0, 0, 0, 0.075);
 	animation-duration: 1s;
 	animation-fill-mode: forwards;
 }
-.right_cartShop > p{
+.cartBody{
+	border: 1px solid rgb(255, 0, 0);
+	width: 100%;
+	height: 100%;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 2.5fr 1fr;
+	grid-template-areas: "cartlist" "carttotal";	
+}
+.cartList{
+	border: 1px solid rgb(255, 0, 190);
+	grid-area: cartlist;
 	text-align: center;
-	margin: 100px auto 0px auto;
-	width: 250px;
-	height: 50px;
+}
+.cartTotal{
+	border: 1px solid blue;
+	width: 100%;
+	height: 80%;
+	box-shadow: 0px -5px 10px rgb(0, 0, 0, 0.075);
+	grid-area: carttotal;
 }
 #cartHeader{
 	display: flex;
 	flex-direction: row;
-	height: fit-content;
-	font-size: .65em;
-	background-color: #883636;
+	height: 50px;
+	font-size: .6em;
+	background-color: var(--mainbackcolor);
 	color: white;
 }
 #cartHeader > h1{
-	padding: 20px 0px 7px 20px;
-	width: 80%;
+	padding: 15px 10px 7px 10px;
+	width: 88%;
 }
 #cartHeader > span{
-	width: 20%;
-	height: width;
+	height: 100%;
 	transition: 1s;
 	filter: invert();
 	cursor: pointer;
@@ -606,6 +621,7 @@ footer{ /* FOOTER */
 	filter: none;
 	transition: .4s;
 }
+
 /* ------------ CENTER HEART PLUS ------------ */
 .center_connectPlus{
 	display: none;
