--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -589,6 +589,11 @@ footer{ /* FOOTER */
 	text-align: center;
 	overflow-y: scroll;
 }
+.cartListnone{
+	font-family: var(--usualFont);
+	font-size: 1.6em;
+	padding: 10vh 20px 5vh 20px;
+}
 .cartTotal{
 	width: 100%;
 	height: 80%;
@@ -601,6 +606,12 @@ footer{ /* FOOTER */
 }
 .cartResume{
 	grid-area: resumetotal;
+	padding: 10px;
+	text-align: center;
+}
+.totalcartPrice{
+	font-family: var(--usualFont);
+	font-size: 1.5em;
 }
 .cartSendButton{
 	color: black;
